# Afetion

./: CMakeLists.txt  README.md  friend.c  friend.h  libfetion.c  libfetion.h  login.c  login.h  main.c  msg.c  msg.h  netCore.c  netCore.h  parson.c  parson.h  type.h
